--- a/index.html
+++ b/index.html
@@ -1896,6 +1896,27 @@ var fhlLecture={
         html += '<div id="lecMain" mode=1 style="padding:10px 50px">' + htmlContent + '</div>';
       dom.html(html);
 
+      if (mode == 1)
+      {
+  /// @verbatim 對齊必須在 dom.html(html) 之後才作, 因為那時候才會有實體, 否則取出來的 height() 會是 0@endverbatim
+        var $lecMain = $('#lecMain');
+        var cols = $lecMain.children();
+        var qcols = Enumerable.From(cols);
+        var qvers = qcols.Select(function (a1) { return $(a1).children(); });
+        // console.log(qvers.ToArray());
+
+        var cntverse = qvers.Max('$.length');
+        for (var i = 0; i < cntverse; i++) {
+          var qvers2 =
+          qvers.Select(function (a1) { if (a1[i] == null) return null; return a1[i] });
+          var maxcy = qvers2.Max(function (a1) { return a1 == null ? 0 : $(a1).height() });
+          //var maxcy = Math.max.apply(Math, qvers2.Select(function (a1) { return $(a1).height(); }).ToArray());
+          
+          qvers2.ForEach(function (a1) { if ( a1!=null) $(a1).height(maxcy); });
+        }
+      }
+
+
       // 2016.01.21(四) 版權宣告 snow 
       {
         var div_copyrigh = $('<div id="div_copyright" class="lec copyright"></div>');
