交錯 / 並列 顯示開關已加入

--- a/index.html
+++ b/index.html
@@ -875,6 +875,8 @@ var settings={
         realTimePopUpSelect.registerEvents(ps);
         gbSelect.init(ps,$('#gbSelect'));
         gbSelect.registerEvents(ps);
+        show_mode.init(ps, $('#show_mode'));
+        show_mode.registerEvents(ps);
         mapTool.init(ps,$('#mapTool'));
         mapTool.registerEvents(ps);
         imageTool.init(ps,$('#imageTool'));
@@ -1006,6 +1008,43 @@ var gbSelect={
         //html += '<span style="color: #770000;">施工中...</span>';
         dom.html(html);
         $('#gbSelectSwitch').attr("checked",(ps.gb==1)?true:false);
+  }
+};
+var show_mode = {
+  init: function (ps, dom) {
+    this.dom = dom;
+    this.render(ps, this.dom);
+  },
+  registerEvents: function (ps) {
+    $('#show_modeSwitch').change(
+      function () {
+        if ($(this).is(':checked')) {
+          // checked 是指開啟圓圈移到右邊. 那就應該是 出現「交錯」
+          ps.show_mode = 2;
+          //ps.chineses = bookGB[book.indexOf(ps.chineses)];
+          fhlLecture.render(ps, fhlLecture.dom);
+        }
+        else {
+          // 出現「並列」
+          ps.show_mode = 1;
+          //ps.chineses = book[bookGB.indexOf(ps.chineses)];
+          fhlLecture.render(ps, fhlLecture.dom);
+        }
+        setPageState(ps);
+      });
+  },
+  render: function (ps, dom) {
+    var html = "<div>顯示切換:</div>";
+    html += '<div class="onOffSwitch">\
+                    <input type="checkbox" name="show_modeSwitch" class="onOffSwitch-checkbox" id="show_modeSwitch">\
+                    <label class="onOffSwitch-label" for="show_modeSwitch">\
+                        <span class="onOffSwitch-inner showmodeSwitch"></span>\
+                        <span class="onOffSwitch-switch"></span>\
+                    </label>\
+                </div>';
+    //html += '<span style="color: #770000;">施工中...</span>';
+    dom.html(html);
+    $('#show_modeSwitch').attr("checked", (ps.show_mode == 2) ? true : false);
   }
 };
 var realTimePopUpSelect={
@@ -1577,7 +1616,7 @@ function sortBibleVersion(r,ps){
 var fhlLecture={
   init:function(ps,dom){
     this.dom=dom;
-    this.render(ps,dom);
+    this.render(ps, dom);
   },
   selectLecture:function(book,chap,sec){
     var that=this.dom;
@@ -1781,7 +1820,8 @@ var fhlLecture={
         }
       }
 
-      var mode = 1;// 原本的. 就切回0
+      //var mode = 1;// 原本的. 就切回0
+      var mode = ps.show_mode;
       switch(mode)
       {
         case 0:
@@ -3240,6 +3280,7 @@ var parsingPopUp={
                 <li><div id="snSelect"></div></li>
                 <li><div id="realTimePopUpSelect"></div></li>
                 <li><div id="gbSelect"></div></li>
+                <li><div id="show_mode"></div></li>
                 <li><div id="mapTool"></div></li>
                 <li><div id="imageTool"></div></li>
                 <li><div id="fontSizeTool"></div></li>
