Bug修正_LeftWindow 或 InfoWindow 寬度改變時, 經文沒有即時重排, 會擠壓在一起 在 resizable 的 callback 中已經新增了 (2處)

--- a/index.html
+++ b/index.html
@@ -859,6 +859,9 @@ var fhlLeftWindow={
               'left': currentWidth+12+12+'px',
               'right': '12px'
           });
+
+          // snow add 2016-07
+          fhlLecture.reshape(pageState);
         }
       });
       $('.ui-resizable-handle.ui-resizable-e').html('<span>&#9776;</span>');
@@ -2418,6 +2421,9 @@ var fhlInfo={
               'width': width-48+'px',
               'right': currentWidth+'px'
             });
+
+            // snow add 2016-07
+            fhlLecture.reshape(pageState);
         }
       });
       $('.ui-resizable-handle.ui-resizable-w').html('<span>&#9776;</span>');
